syntax = "proto3";
package conduit.module;

message ModuleActivationRequest {}

message ModuleActivationResponse {
  enum ActivationResponse {
    ALREADY_ACTIVATED = 0;
    ACTIVATED = 1;
  }
  ActivationResponse status = 1;
}

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

message RunMigrationsRequest {
  int32 v1 = 1;
  int32 v2 = 2;
  bool upgrade = 3;
}

message RunMigrationsResponse {
  enum MigrationsResponse {
    REQUIRED = 0;
    UNSUPPORTED = 1;
    READY = 2;
    FAILED = 3;
  }
  MigrationsResponse migrationStatus = 1;
}

service ConduitModule {
  rpc ActivateModule(ModuleActivationRequest) returns (ModuleActivationResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc RunMigrations(RunMigrationsRequest) returns (RunMigrationsResponse);
}
